fix: SEO and templates

--- a/index.html
+++ b/index.html
@@ -1,11 +1,84 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href="https://api.fontshare.com/v2/css?f[]=clash-grotesk@200,300,400,500,600,700,1&display=swap" rel="stylesheet">
+    <link
+      href="https://api.fontshare.com/v2/css?f[]=clash-grotesk@200,300,400,500,600,700,1&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Readme Shop</title>
+
+    <!-- Primary SEO -->
+    <title>Readme Shop — Curated README & Contribution Templates</title>
+    <meta
+      name="description"
+      content="Readme Shop: a collection of curated README templates and contribution cards to help open-source maintainers and contributors create high-quality README files quickly."
+    />
+    <meta name="author" content="Narain Karthik" />
+    <meta
+      name="keywords"
+      content="README templates, open source, contribution cards, README generator, templates, GitHub README"
+    />
+
+    <!-- Open Graph -->
+    <meta
+      property="og:title"
+      content="Readme Shop — Curated README & Contribution Templates"
+    />
+    <meta
+      property="og:description"
+      content="A collection of curated README templates and contribution cards to help maintainers and contributors craft clear, beautiful READMEs."
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://github.com/narainkarthikv/readme-shop"
+    />
+    <meta property="og:image" content="/preview.png" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Readme Shop — Curated README & Contribution Templates"
+    />
+    <meta
+      name="twitter:description"
+      content="Browse and copy curated README templates and contribution cards for open-source projects."
+    />
+    <meta name="twitter:image" content="/preview.png" />
+
+    <!-- Fallback icons -->
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+    <!-- Robots & Canonical -->
+    <meta name="robots" content="index, follow" />
+    <link
+      rel="canonical"
+      href="https://github.com/narainkarthikv/readme-shop"
+    />
+
+    <!-- Structured data: Website + Organization -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@graph": [
+          {
+            "@type": "WebSite",
+            "name": "Readme Shop",
+            "url": "https://github.com/narainkarthikv/readme-shop",
+            "description": "Curated README templates and contribution cards for open-source projects."
+          },
+          {
+            "@type": "Organization",
+            "name": "Narain Karthik",
+            "url": "https://github.com/narainkarthikv",
+            "sameAs": ["https://github.com/narainkarthikv"]
+          }
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
