feat: content updation & fixes

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <!-- Primary Meta Tags -->
-    <title>README Shop - Build premium GitHub READMEs in minutes</title>
+    <title>README Shop - Build polished GitHub READMEs in minutes</title>
     <meta
       name="title"
-      content="README Shop - Build premium GitHub READMEs in minutes" />
+      content="README Shop - Build polished GitHub READMEs in minutes" />
     <meta
       name="description"
-      content="README Shop helps you craft world-class GitHub READMEs with templates, badges, icons, and live Markdown preview. Export clean Markdown instantly and give your open-source project the polish it deserves." />
+      content="Structure your README with confidence. Build clean, ready-to-publish documentation using guided templates and live previews." />
     <meta name="author" content="Narain Karthik" />
     <meta
       name="keywords"
@@ -33,10 +33,10 @@
     <meta property="og:url" content="https://readme-shop.vercel.app" />
     <meta
       property="og:title"
-      content="README Shop - Build premium GitHub READMEs in minutes" />
+      content="README Shop - Build polished GitHub READMEs in minutes" />
     <meta
       property="og:description"
-      content="Create professional GitHub READMEs with templates, badges, icons, stats, and live preview. Export clean Markdown instantly." />
+      content="Structure your README with confidence. Build clean, ready-to-publish documentation using guided templates and live previews." />
     <meta property="og:image" content="/og-image.svg" />
     <meta property="og:image:alt" content="README Shop preview" />
     <meta property="og:image:width" content="1200" />
@@ -49,10 +49,10 @@
     <meta name="twitter:creator" content="@narainkarthik" />
     <meta
       name="twitter:title"
-      content="README Shop - Build premium GitHub READMEs in minutes" />
+      content="README Shop - Build polished GitHub READMEs in minutes" />
     <meta
       name="twitter:description"
-      content="Templates, badges, icons, and live preview for polished GitHub READMEs. Export clean Markdown instantly." />
+      content="Structure your README with confidence. Build clean, ready-to-publish documentation using guided templates and live previews." />
     <meta name="twitter:image" content="/og-image.svg" />
     <meta name="twitter:image:alt" content="README Shop preview" />
 
@@ -88,7 +88,7 @@
           "name": "Narain Karthik",
           "url": "https://github.com/narainkarthikv"
         },
-        "description": "README Shop helps you craft professional GitHub READMEs with templates, badges, icons, GitHub stats, and live Markdown preview. Export clean Markdown instantly and improve project clarity.",
+        "description": "Structure your README with confidence. Build clean, ready-to-publish documentation using guided templates and live previews.",
         "featureList": [
           "Curated README templates",
           "Badges and icons library",
